deployment/blog-prod-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-prod
  labels:
    gateway-access: "true"
