deployment/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bloggingapp-deployment
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: bloggingapp
  template:
    metadata:
      labels:
        app: bloggingapp
    spec:
      containers:
        - name: bloggingapp
          image: charansait372/devops-blog-new:v16
          imagePullPolicy: Always  # Ensure always pulling the latest image
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred  # Reference to the Docker registry secret

---
apiVersion: v1
kind: Service
metadata:
  name: bloggingapp-svc
spec:
  selector:
    app: bloggingapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
