deployment/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default  # Use the appropriate namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Optional: rewrite the URL path
spec:
  ingressClassName: nginx  # Specify the Ingress class (e.g., nginx for Nginx Ingress Controller)
  rules:
  - host:  charanfullstackdevopsapp.com  # Replace with your domain name or the desired hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service  # Service name defined for frontend
            port:
              number: 80  # Port exposed by the frontend service
