deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: charanfullstackdevopsapp.com
    http:
      paths:
      - path: /  # Route for frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80  # Port exposed by frontend service
      - path: /your-endpoint  # Reverse proxy for backend
        pathType: Prefix
        backend:
          service:
            name: bloggingapp-svc
            port:
              number: 8080  # Port exposed by backend service
