deployment/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: default
  labels:
    policy: local
spec:
  podSelector:
    matchLabels:
      app: mysql   # applies to MySQL pods
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: app-green   # only backend pods (app-green) can connect
      ports:
        - protocol: TCP
          port: 3306          # MySQL default port
  policyTypes:
    - Ingress
